--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "backend/server.js",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
-  },
-  "engines":{
-    "node": "10.16.0"
-  },
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+    },
   "eslintConfig": {
     "extends": "react-app"
   },
