--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "proxy": "http://localhost:4000/",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "backend/server.js",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
   },
   "engines": {
