--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^3.5.6",
     "mui-checkboxlist": "^1.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-checkbox-list": "0.0.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
